
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.15_35_55.48.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.15_57_12.54.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.18_01_23.08.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/Anim.sdkmesh

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/11.17_37_34.39.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/14.19_33_07.16.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp
	modified:   ZGame/3dsMax/FBX/contentexporter/sdkmeshfilewriter/sdkmeshfilewriter.cpp
