@@ -105,9 +105,10 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1059+----+----+----+----+----+
-     TimeCnt : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~65  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-12-11 17:20:18 L.20 '23982 T559072046 .K ~43  +----+----+----+----+----+
+     Zndex_E : //z 2015-12-15 17:49:45 L.16 '22215 T832972925 .K ~1069+----+----+----+----+----+
+     TimeCnt : //z 2015-12-15 17:48:58 L.16 '22262 T832937024 .K ~66  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44  +----+----+----+----+----+
+     #44  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44    V+.1104 L+.1169 
      #43  R+ : //z 2015-12-11 17:20:18 L.20 '23982 T559072046 .K ~43    V+.1085 L+.1146 
      #42  R+ : //z 2015-12-07 14:04:10 L.24 '35750 T3441737450.K ~42    V+.1068 L+.1137 
      #41  R+ : //z 2015-12-04 11:46:13 L.27 '44027 T3663712269.K ~41    V+.1032 L+.1096 
@@ -155,7 +156,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1102  R+.43   L+.1159 --+----+
+     Version : //z 2015-12-15 17:49:45 L.16 '22215 T832972925 .K ~1113  R+.44   L+.1171 --+----+
+     #58  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~1104  R+.44   L+.1170 V+.1104 
      #58  V+ : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1102  R+.43   L+.1159 
      #57  R+ : //z 2015-12-11 17:20:18 L.20 '23982 T559072046 .K ~1085  R+.43   L+.1147 V+.1085 
      #57  V+ : //z 2015-12-07 14:40:13 L.24 '33587 T3446337389.K ~1083  R+.42   L+.1140 
@@ -1162,3 +1164,11 @@ C++ 3d skeletal animation engine and tools
 https://code.google.com/p/ozz-animation/
 https://github.com/galek/ozz-animation.git
 #endregion //z 2015-12-11 17:20:18 L.20 '23982 BG57IV3@XCL T559072046 .K.F4146951713-+----+----+
+
+#region 12-15 17:48 R#.44   @directx sdk 一些使用说明
+//z 2015-12-15 17:48:58 L.16 '22262 T832937024 .K[T66,L1169,R44,V1106]
+01. 
+todo http://blogs.msdn.com/b/chuckw/ 多看看该 blog 
+The Zombie DirectX SDK
+http://blogs.msdn.com/b/chuckw/archive/2015/03/23/the-zombie-directx-sdk.aspx
+#endregion //z 2015-12-15 17:48:47 L.16 '22273 BG57IV3@XCL T832936990 .K.F4146951713-+----+----+
