@@ -42,9 +42,10 @@
        Zcl_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-12-08 11:42:27 L.23 '44253 T3934774066.K ~37  +----+----+----+----+----+
+     Zndex_E : //z 2015-12-15 18:00:14 L.16 '21586 T2119373677.K ~38  +----+----+----+----+----+
      TimeCnt : //z 2015-10-08 11:20:22 L.84 '45578 T1269073511.K ~2   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-12-08 11:42:27 L.23 '44253 T3934774066.K ~12  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-12-15 18:00:14 L.16 '21586 T2119373677.K ~13  +----+----+----+----+----+
+     #13  R+ : //z 2015-12-15 18:00:14 L.16 '21586 T2119373677.K ~13    V+.50   L+.327  
      #12  R+ : //z 2015-12-08 11:42:27 L.23 '44253 T3934774066.K ~12    V+.48   L+.308  
      #11  R+ : //z 2015-11-30 09:22:56 L.31 '52624 T2253803763.K ~11    V+.46   L+.289  
      #10  R+ : //z 2015-11-23 14:59:55 L.38 '32405 T2024936538.K ~10    V+.44   L+.270  
@@ -58,7 +59,8 @@
      #2   R+ : //z 2015-10-08 11:19:16 L.84 '45644 T1268210994.K ~2     V+.12   L+.114  
      #1   R+ : //z 2015-10-08 11:18:47 L.84 '45673 T1268175157.K ~1     V+.9    L+.94   
      File.Op : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Version : //z 2015-12-08 11:42:27 L.23 '44253 T3934774066.K ~49    R+.12   L+.310  --+----+
+     Version : //z 2015-12-15 18:00:14 L.16 '21586 T2119373677.K ~51    R+.13   L+.329  --+----+
+     #2   R+ : //z 2015-12-15 18:00:14 L.16 '21586 T2119373677.K ~50    R+.13   L+.328  V+.50   
      #2   R+ : //z 2015-12-08 11:42:27 L.23 '44253 T3934774066.K ~48    R+.12   L+.309  V+.48   
      #2   R+ : //z 2015-11-30 09:22:56 L.31 '52624 T2253803763.K ~46    R+.11   L+.290  V+.46   
      #2   R+ : //z 2015-11-23 14:59:55 L.38 '32405 T2024936538.K ~44    R+.10   L+.271  V+.44   
@@ -307,3 +309,20 @@ Week.Kaizen
 五，W.2015-12-11 
 六，R.2015-12-12 
 #endregion //z 2015-12-08 11:42:27 L.23 '44253 BG57IV3@XCL T3934774066.K.F2564861307-+----+----+
+
+#region 12-15 18:00 R#.13   @第50周总结 2015-12-13 --> 2015-12-19
+Week.Plan
+	01. 
+Week.Done
+	01. 
+Week.Kaizen
+	01. 
+
+日，R.2015-12-13 
+一，W.2015-12-14 
+二，W.2015-12-15 
+三，W.2015-12-16 
+四，W.2015-12-17 
+五，W.2015-12-18 
+六，R.2015-12-19 
+#endregion //z 2015-12-15 18:00:14 L.16 '21586 BG57IV3@XCL T2119373677.K.F2564861307-+----+----+
