@@ -6262,3 +6262,15 @@ Changes to be committed:
 	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp
 	modified:   ZGame/3dsMax/FBX/contentexporter/sdkmeshfilewriter/sdkmeshfilewriter.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/12/15.18_28_03.65.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   Doc/K/T.2015.pXr.cs
+	modified:   History.txt
+
